2014-05-26  Ethan A Merritt  <merritt@u.washington.edu>

	* term/js/gnuplot_svg.js term/svg.trm:
	Grey out key entries when corresponding plot is toggled off.

	* src/graphics.c: Autoincremented user linestyle was not applied to
	histograms if the key was disabled. 
	Bugfix

2014-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/boundary.c:  A width adjustment for the length of the key title
	was being applied to every column of entries in the key instead of just
	once for the whole key.
	Bugfix

2014-05-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_stringcolumn): Return an empty string if asked for
	stringcolumn(N) on an empty field of a *.csv file.  Otherwise it would
	return NULL which may cause a segfault later on.
	Bugfix.

2014-05-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gadgets.c (clip_line): It is not safe to use (A*B >= 0) as a
	substitute for the test (sign(A) != sign(B)).
	It fails when A and B are integers and their product overflows.
	Bugs #1390, #1392       See also Bug #1358

2014-04-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (f_timecolumn):  This function basically does not work.
	If it ever appears in a using spec slot other than 0 or 1, it will fail
	with either a segfault or a garbage return value because there is no
	no associated timefmt.  Version 5 fixes this by requiring the timefmt to
	be passed as a second parameter. Here we don't redefine the function but
	we try the FIRST_X_AXIS timefmt rather than faulting.
	Bug #1394

2014-04-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readascii):  If a read request returns a string
	rather than a numerical value, nevertheless fill in the numerical 
	value as NaN.  This is better than leaving some random garbage there
	(in practice probably some earlier data value).
	Bugfix.

	* src/term.c (enhanced_recursion):  Consume only a single space