@@ -17,6 +17,7 @@ New features, changes and fixes in gnuplot version 4.6.6
 * FIX clipping could fail on integer overflow
 * FIX segfault resulting from strcol(N) applied to empty field in a *.csv file
 * FIX adjustment of key size to accommodate long key title
+* FIX treat data value read as "NaN" the same as we would "1/0"
 
 
 New features, changes and fixes in gnuplot version 4.6.5
